# Senz3D_Virtual_Fixtures

./: README.md  README.md~
virtual_fixtures/: CMakeLists.txt  CMakeLists.txt~  daVinci_README.md  daVinci_README.md~  package.xml  package.xml~
virtual_fixtures/include/Fixtures/: object_seg.h~  passthrough_filter.h~  plane_seg.h~  pre_operative_image.h~  virtual_fixtures.h~
virtual_fixtures/include/Fixtures/Feedback/: extract_borders.h  normal_cloud.h
virtual_fixtures/include/Fixtures/Filters/: passthrough_filter.h  passthrough_filter.h~  radius_conditional_filter.h  radius_conditional_filter.h~
virtual_fixtures/include/Fixtures/Registrations/: intraoperative_image.h
virtual_fixtures/include/Fixtures/Segmentations/: object_seg.h  outlier_segmentation.h  outlier_segmentation.h~  reconstruction_triangulation.h
virtual_fixtures/launch/: Image_modalities.launch  slam_gmapping_pr2.launch  softkinetic.rviz  virtual_fixtures_display.launch  virtual_fixtures_display.launch~
virtual_fixtures/resources/: LOG.txt
virtual_fixtures/src/Feedback/: normal_cloud.cpp  normal_cloud.cpp~  torque_and_force.cpp
virtual_fixtures/src/Filters/: passthrough_filter.cpp  passthrough_filter.cpp~  radius_conditional_filter.cpp  radius_conditional_filter.cpp~
virtual_fixtures/src/Fixtures/: concave_hull.cpp  concave_hull.cpp~
virtual_fixtures/src/Images/: fixed_base_tool.cpp~  normal_components.cpp
virtual_fixtures/src/Registrations/: cloud_to_cloud_registration.cpp~  intraoperative_image.cpp  intraoperative_image.cpp~  pre_operative_image.cpp~  real_time_ctc.cpp~
virtual_fixtures/src/Segmentations/: object_seg.cpp  object_seg.cpp~  outlier_segmentation.cpp  outlier_segmentation.cpp~  reconstruction_triangulation.cpp  reconstruction_triangulation.cpp~
